deploy/ingress-smoke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-smoke
  namespace: ingress-smoke
spec:
  type: ClusterIP
  selector:
    app: ingress-smoke
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
